--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handlebars-spec",
-  "version": "3.0.3",
+  "version": "3.0.3-alpha.1",
   "description": "",
   "main": "bin/index.js",
   "scripts": {
