--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,10 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[Makefile]
+indent_style = tab
+indent_size = 4
+
 [*.json]
 indent_style = tab
+indent_size = 4
