--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "handlebars.js"]
 	path = handlebars.js
-	url = https://github.com/wycats/handlebars.js.git
+	url = https://github.com/jbboehr/handlebars.js.git
