--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^13.13.0",
+    "@types/uglify-js": "^3.9.0",
     "commander": "^2.20.3",
     "extend": "^1.2.x",
     "handlebars": "4.7.6",
     "jshint": "2.5.x",
-    "sinon": "^9.0.2"
+    "sinon": "^9.0.2",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3",
+    "uglify-js": "^3.9.1"
   }
 }
