--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^13.13.0",
-    "@types/uglify-js": "^3.9.0",
-    "commander": "^2.20.3",
+    "clime": "^0.5.10",
+    "deep-equal": "^2.0.2",
     "extend": "^1.2.x",
     "handlebars": "4.7.6",
-    "jshint": "2.5.x",
     "sinon": "^9.0.2",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3",
     "uglify-js": "^3.9.1"
+  },
+  "devDependencies": {
+    "@types/deep-equal": "^1.0.1",
+    "@types/extend": "^3.0.1",
+    "@types/node": "^13.13.1",
+    "@types/uglify-js": "^3.9.0",
+    "source-map": "^0.7.3",
+    "ts-node": "^8.9.0",
+    "typescript": "^3.8.3"
   }
 }
