--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
   "name": "handlebars-spec",
-  "version": "4.0.5",
+  "version": "10.407060.0",
   "description": "",
-  "main": "bin/index.js",
-  "scripts": {
-    "test": "bin/runner.js"
-  },
   "author": "John Boehr <jbboehr@gmail.com>",
   "contributors": [
     "Kasper Isager <kasperisager@gmail.com>"
   ],
   "license": "MIT",
   "dependencies": {
-    "@types/sinon": "^9.0.0",
     "clime": "^0.5.10",
-    "deep-equal": "^2.0.2",
+    "deep-equal": "^2.0.3",
     "extend": "^1.2.x",
     "handlebars": "4.7.6",
+    "hjson": "^3.2.1",
+    "sha1": "^1.1.1",
     "sinon": "^9.0.2",
     "uglify-js": "^3.9.1"
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
     "@types/extend": "^3.0.1",
-    "@types/node": "^13.13.1",
+    "@types/hjson": "^2.4.1",
+    "@types/node": "^13.13.4",
+    "@types/sinon": "^9.0.0",
     "@types/uglify-js": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "eslint": "^6.8.0",
     "source-map": "^0.7.3",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
