--- a/package.json
+++ b/package.json
@@ -27,8 +27,17 @@
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-compat": "^3.5.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "source-map": "^0.7.3",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
+  },
+  "scripts": {
+    "format": "eslint --ext .js,.ts --fix ."
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
