--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 		"resolveJsonModule": true,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"moduleResolution": "node"
 	},
 	"include": [
 		"src/**/*"
