--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
 		"moduleResolution": "node"
 	},
 	"include": [
+		"src/types.d.ts",
 		"src/**/*"
 	],
 	"exclude": ["node_modules", "./handlebars.js", "**/*.spec.ts"]
