--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "format": "eslint --ext .js,.ts --fix ."
+	"extractFunctions": "ts-node --files src/cli.ts extractFunctions",
+	"format": "eslint --ext .js,.ts --fix .",
+	"lint": "eslint --ext .js,.ts .",
+	"generate": "ts-node --files src/cli.ts generate",
+	"testRunner": "ts-node --files src/cli.ts testRunner"
   },
   "engines": {
     "node": ">=12.0.0"
