--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "handlebars-spec",
-  "version": "104.6.4",
-  "description": "",
-  "author": "John Boehr <jbboehr@gmail.com>",
-  "contributors": [
-    "Kasper Isager <kasperisager@gmail.com>"
-  ],
-  "license": "MIT",
-  "dependencies": {
-    "clime": "^0.5.10",
-    "deep-equal": "^2.0.3",
-    "extend": "^3.0.2",
-    "handlebars": "4.7.6",
-    "hjson": "^3.2.1",
-    "sha1": "^1.1.1",
-    "sinon": "^9.0.2",
-    "uglify-js": "^3.9.1"
-  },
-  "devDependencies": {
-    "@types/deep-equal": "^1.0.1",
-    "@types/extend": "^3.0.1",
-    "@types/hjson": "^2.4.1",
-    "@types/node": "^13.13.4",
-    "@types/sinon": "^9.0.0",
-    "@types/uglify-js": "^3.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-compat": "^3.5.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "source-map": "^0.7.3",
-    "ts-node": "^8.9.1",
-    "typescript": "^3.8.3"
-  },
-  "scripts": {
-    "extractFunctions": "ts-node --files src/cli.ts extractFunctions",
-    "format": "eslint --ext .js,.ts --fix .",
-    "lint": "eslint --ext .js,.ts .",
-    "generate": "ts-node --files src/cli.ts generate",
-    "testRunner": "ts-node --files src/cli.ts testRunner"
-  },
-  "engines": {
-    "node": ">=12.0.0"
-  }
+	"name": "handlebars-spec",
+	"version": "104.6.4",
+	"description": "",
+	"author": "John Boehr <jbboehr@gmail.com>",
+	"contributors": [
+		"Kasper Isager <kasperisager@gmail.com>"
+	],
+	"license": "MIT",
+	"dependencies": {
+		"clime": "^0.5.10",
+		"deep-equal": "^2.0.3",
+		"extend": "^3.0.2",
+		"handlebars": "4.7.6",
+		"hjson": "^3.2.1",
+		"sha1": "^1.1.1",
+		"sinon": "^9.0.2",
+		"uglify-js": "^3.9.1"
+	},
+	"devDependencies": {
+		"@types/deep-equal": "^1.0.1",
+		"@types/extend": "^3.0.1",
+		"@types/hjson": "^2.4.1",
+		"@types/node": "^13.13.4",
+		"@types/sinon": "^9.0.0",
+		"@types/uglify-js": "^3.9.0",
+		"@typescript-eslint/eslint-plugin": "^2.30.0",
+		"@typescript-eslint/parser": "^2.30.0",
+		"eslint": "^6.8.0",
+		"eslint-plugin-compat": "^3.5.1",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-node": "^11.1.0",
+		"source-map": "^0.7.3",
+		"ts-node": "^8.9.1",
+		"typescript": "^3.8.3"
+	},
+	"scripts": {
+		"build": "tsc",
+		"extractFunctions": "ts-node --files src/cli.ts extractFunctions",
+		"format": "eslint --ext .js,.ts --fix .",
+		"lint": "eslint --ext .js,.ts .",
+		"generate": "ts-node --files src/cli.ts generate",
+		"testRunner": "ts-node --files src/cli.ts testRunner"
+	},
+	"engines": {
+		"node": ">=12.0.0"
+	}
 }
