--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ php:
   - 7.4
   - master
 
+before_install:
+  - export PATH="./node_modules/.bin:$PATH"
+
 install:
   - npm install
   - make
-
-before_script:
-  - export PATH="./node_modules/.bin:$PATH"
 
 script:
   - make test_changes
@@ -28,5 +28,6 @@ branches:
 matrix:
   include:
     - language: nix
+      before_install:
       install:
       script: nix-build --argstr handlebarsSpecVersion $TRAVIS_BRANCH
