--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,7 @@
 		"@typescript-eslint/no-explicit-any": "off",
 		"no-prototype-builtins": "off",
 		"no-use-before-define": "off",
-		"@typescript-eslint/no-use-before-define": "off"
+		"@typescript-eslint/no-use-before-define": "off",
+		"@typescript-eslint/ban-types": "off"
 	}
 }
