Update dependencies, ci
Resolves #9 #10 #11 #12 #13 #14 #15

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,6 +61,7 @@
 		"no-prototype-builtins": "off",
 		"no-use-before-define": "off",
 		"@typescript-eslint/no-use-before-define": "off",
-		"@typescript-eslint/ban-types": "off"
+		"@typescript-eslint/ban-types": "off",
+		"@typescript-eslint/explicit-module-boundary-types": "off"
 	}
 }
