--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
       - run: make test_changes
       # - run: make test_eslint
       - run: make test_node
+
   php:
     runs-on: ubuntu-latest
     strategy:
@@ -70,3 +71,13 @@ jobs:
           nix_path: nixpkgs=channel:nixos-22.05
       - run: nix-build
       - run: nix-build nix/ci.nix
+
+  nix-flake:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: cachix/install-nix-action@v18
+        with:
+          nix_path: nixpkgs=channel:nixos-22.05
+      - run: nix build
+      - run: nix flake check
