--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
     ],
     "rules": {
         "indent": [
-            "error",
+            "off",
             4
         ],
         "linebreak-style": [
